--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </div>
     </header>
     <div class="gallery"></div>
+    <div id="dark-mode" onclick="darkMode()"></div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="js/lightbox.min.js"></script>
